<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.afcarrasquilla.mygamelist.views.ListadoActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_opciones"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_ordenar"
        android:orderInCategory="100"
        android:title="@string/action_ordenar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title=""
        android:icon="@drawable/ic_stat_search"
        app:showAsAction="ifRoom" />
</menu>
