<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/formularioActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:verticalScrollbarPosition="defaultPosition"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.FormularioActivity"
    tools:showIn="@layout/activity_formulario">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButtonJuego"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/gamedefault" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputNombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawableStart="@drawable/ic_shortcut_name_icon"
                    android:ems="10"
                    android:hint="@string/content_formulario_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputCompany"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDesarrolladora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawableStart="@drawable/ic_shortcut_domain"
                    android:ems="10"
                    android:hint="@string/content_formulario_company"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/horasLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="90dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="90dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextHoras"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_shortcut_access_time"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textViewHoras"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/content_formulario_hours"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fechaLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="80dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_shortcut_calendar_today"
                    android:ems="10"
                    android:hint="@string/content_formulario_date_format"
                    android:inputType="date" />

                <ImageButton
                    android:id="@+id/fechaButtom"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    app:srcCompat="@android:drawable/arrow_down_float" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/plataformaLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="45dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="45dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewPlataforma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_shortcut_plataform_icon"
                    android:gravity="center"
                    android:text="@string/content_formulario_plataform" />

                <Spinner
                    android:id="@+id/spinnerPlataforma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/propiedadLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="110dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="110dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewPropiedad"
                    android:layout_width="18dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_shortcut_library_add"
                    android:gravity="center"
                    android:text="@string/content_formulario_own" />

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/botonesLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/content_formulario_buttom_save" />

                <Button
                    android:id="@+id/botonBorrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/content_formulario_buttom_delete" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>